--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ main {
 footer {
     background-color: #333;
     color: white;
-    text-align: center;
+    text-align: right;
     padding: 20px 0;
     min-height: 60px;
     width: 100%;
