--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 * {
     box-sizing: border-box;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
